only issue is cropped 'paTh' image

--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -8,3 +8,135 @@
   width: 1440px;
 }
 
+.flex-row {
+  height: 1063px;
+  display: flex;
+  align-items: flex-start;
+  min-width: 1364px;
+}
+
+.flex-column {
+  width: 732px;
+  margin-top: 3.66px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  min-height: 972px;
+}
+
+.top-tab {
+  width: 609px;
+  height: 138px;
+  position: relative;
+  margin-left: 22.81px;
+  text-align: center;
+  align-items: center;
+}
+
+.link-group {
+  width: 548px;
+  margin-left: 84px;
+  display: flex;
+  flex-direction: column;
+  padding: 56px 59px;
+  align-items: center;
+  min-height: 1063px;
+  background-color: var(--mystic);
+}
+
+.about-text {
+  width: 732px;
+  min-height: 811px;
+  margin-top: 23px;
+  font-family: 'Chivo';
+  font-weight: 400;
+  color: var(--charade);
+  font-size: var(--font-size-m);
+  letter-spacing: 0;
+}
+
+.helix {
+  position: absolute;
+  width: 121px;
+  height: 138px;
+  top: 0;
+  left: 0;
+}
+
+.about {
+  font-family: 'Chivo';
+  font-size: 48px;
+  color: #4C5F94;
+  position: absolute;
+  top: 54px;
+  left: 270px;
+  text-align: center;
+  letter-spacing: 0;
+}
+
+.ack-text {
+  width: 401px;
+  min-height: 75px;
+  align-self: flex-end;
+  margin-top: 62px;
+  font-family: 'Chivo';
+  font-weight: 700;
+  color: var(--charade);
+  font-size: var(--font-size-xs);
+  letter-spacing: 0;
+}
+
+.ack {
+  font-family: 'Chivo';
+  font-size: 24px;
+  width: 392px;
+  min-height: 43px;
+  font-weight: bold;
+  align-self: flex-end;
+  letter-spacing: 0;
+}
+
+.path {
+  width: 174px;
+  height: 100px;
+  margin-top: 35px;
+  margin-left: 28px;
+  object-fit: cover;
+  cursor: pointer;
+}
+
+.osg {
+  width: 174px;
+  height: 100px;
+  margin-top: 35px;
+  margin-left: 28.87px;
+  object-fit: cover;
+  cursor: pointer;
+}
+
+.nsf {
+  width: 100px;
+  height: 100px;
+  margin-top: 29px;
+  margin-left: 28.97px;
+  object-fit: cover;
+  cursor: pointer;
+}
+
+.xsede {
+  width: 262px;
+  height: 100px;
+  margin-top: 44px;
+  margin-left: 28.78px;
+  object-fit: cover;
+  cursor: pointer;
+}
+
+.UNL {
+  width: 253px;
+  height: 100px;
+  margin-top: 46px;
+  margin-left: 28.88px;
+  object-fit: cover;
+  cursor: pointer;
+}
